# enterprise-pytest

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
sut/admin-ui/: index.html  package-lock.json  package.json  vite.config.ts
sut/admin-ui/src/: App.tsx  api.ts  hooks.ts  main.tsx  types.ts
sut/admin-ui/src/components/: Shell.tsx  Sidebar.tsx  StatusBadge.tsx
sut/admin-ui/src/pages/: Coupons.tsx  Dashboard.tsx  Login.tsx  Orders.tsx  Products.tsx
sut/app/: __init__.py  config.py  database.py  main.py
sut/app/auth/: __init__.py  dependencies.py  jwt.py  passwords.py
sut/app/events/: __init__.py  broker.py
sut/app/models/: __init__.py  coupon.py  customer.py  order.py  product.py
sut/app/routers/: __init__.py  admin.py  auth.py  coupons.py  orders.py  products.py
sut/app/schemas/: __init__.py  auth.py  coupon.py  customer.py  order.py  product.py
sut/app/services/: __init__.py  coupon_service.py  customer_service.py  order_service.py  product_service.py
sut/app/static/: style.css
sut/app/static/admin/: index.html
sut/app/static/admin/assets/: index-C9DBaGDS.css  index-C_TIPpTV.js
sut/app/templates/: base.html  dashboard.html  login.html
tests/: config.py  conftest.py  factories.py  test_fixtures_smoke.py  test_plugin_smoke.py
tests/contract/: conftest.py  test_consumer_contracts.py
tests/functional/: conftest.py  test_auth.py  test_coupons.py  test_orders.py  test_products.py
tests/hypothesis/: conftest.py  test_property_schemas.py
tests/messaging/: conftest.py  test_order_events.py
tests/performance/: conftest.py  locustfile.py  test_benchmarks.py
tests/plugins/: pytest_enterprise.py
tests/regression/: conftest.py  test_coupon_edge_cases.py  test_data_integrity.py  test_order_edge_cases.py
tests/ui/: conftest.py  test_dashboard.py  test_login.py
tests/utils/: assertions.py  http_helpers.py  waiters.py
